fixed overflow-x Services Page

--- a/src/style/services.css
+++ b/src/style/services.css
@@ -14,6 +14,9 @@
 
 	margin: 30px 0;
 }
+.services__container {
+	overflow: hidden;
+}
 .services__container > hr {
 	width: 100vw;
 }
